<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Tasks for day</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Task Description <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Task Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="is_task_important">Is task important?</string>
    <string name="done">Done</string>
    <string name="tasks_for_today">TASKS FOR TODAY</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_priority">High</string>
    <string name="middle">Middle</string>
    <string name="low">Low</string>
    <string name="select_priority">Select task priority</string>
    <string name="select_task_duration">Select task duration</string>
    <string name="year_btn">Year</string>
    <string name="month_btn">Month</string>
    <string name="week_btn">Week</string>
    <string name="day_btn">Day</string>
    <string name="from_day">FromDayTask</string>
    <string name="from_week">FromWeekTask</string>
    <string name="from_month">FromMonthTask</string>
    <string name="from_year">FromYearTask</string>
    <string name="header_week">Tasks for week</string>
    <string name="header_month">Tasks for month</string>
    <string name="header_year">Tasks for year</string>
    <string name="only_important">Only important</string>
    <string name="uncompleted_task">Uncompleted</string>
    <string name="completed">Completed</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_importance">Sort by importance</string>
    <string name="all_task_for_day">All task for day</string>
</resources>