<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/item_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_headerForPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/select_priority"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/item_name_label" />

        <RadioGroup
            android:id="@+id/importance_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/low_priority"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headerForPriority">

            <RadioButton
                android:id="@+id/high_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/high_priority" />

            <RadioButton
                android:id="@+id/middle_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/middle" />

            <RadioButton
                android:id="@+id/low_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/low" />
        </RadioGroup>


        <TextView
            android:id="@+id/select_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/importance_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/select_task_duration"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/duration_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/select_duration"
            android:orientation="horizontal"
            android:checkedButton="@id/day">

            <RadioButton
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_btn"
                android:layout_weight="25"/>

            <RadioButton
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_btn"
                android:layout_weight="25"/>

            <RadioButton
                android:id="@+id/week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_btn"
                android:layout_weight="25"/>
            <RadioButton
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_btn"
                android:layout_weight="25"/>
        </RadioGroup>

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
